--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,56 +1,47 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/base_layout"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/bg_color"
-    android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/instruction_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:text="@string/config_page_message" />
-
+    android:layout_height="wrap_content">
     <RelativeLayout
-        android:id="@+id/field_parent"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/instruction_text" >
-
-	</RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/button_group"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/field_parent"
-        android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/add_new_row"
+        android:background="@drawable/bg_color"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/instruction_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="pressAdd"
-            android:text="@string/button_new_row_label" />
+            android:layout_alignParentTop="true"
+            android:text="@string/config_page_message" />
 
-        <Button
-            android:id="@+id/done_button"
+        <LinearLayout android:id="@+id/fieldHeader"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@+id/instruction_text">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="6"
+                android:textSize="18sp"
+                android:text="@string/textFieldHeaderNumber"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:textSize="18sp"
+                android:text="@string/textFieldHeaderDelay"/>
+            <ImageButton android:id="@+id/buttonAddRow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/button_desc_add_row"
+                android:background="@android:drawable/ic_input_add"/>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/field_parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="editDone"
-            android:text="@string/button_done_label" />
-
-        <Button
-            android:id="@+id/reset_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:onClick="pressReset"
-            android:text="@string/button_reset_label" />
-
-    </LinearLayout>
-
-</RelativeLayout>
+            android:layout_below="@id/fieldHeader" />
+    </RelativeLayout>
+</ScrollView>
