--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -1,6 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_settings"
-        android:title="@string/menu_settings"
+    <item android:id="@+id/menu_save"
+        android:title="@string/menu_save"
         android:orderInCategory="100" >
+    </item>
+    <item android:id="@+id/menu_reset"
+        android:title="@string/menu_reset"
+        android:orderInCategory="200" >
     </item>
 </menu>
