--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_color"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/instruction_text"
             android:layout_width="wrap_content"
@@ -38,8 +39,9 @@
                 android:background="@android:drawable/ic_input_add"/>
         </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/field_parent"
+            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/fieldHeader" />
