--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,18 @@
         android:background="@drawable/bg_color"
         android:orientation="vertical">
 
+        <Switch android:id="@+id/switchReceiverOnOff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true" />
+
         <TextView
             android:id="@+id/instruction_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
+            android:layout_toStartOf="@id/switchReceiverOnOff"
             android:text="@string/config_page_message" />
 
         <LinearLayout android:id="@+id/fieldHeader"
