--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,71 +1,30 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/base_layout"
     android:layout_width="match_parent"
+    android:background="@drawable/bg_color"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_color"
+        android:layout_margin="10dp"
         android:orientation="vertical">
 
         <Switch android:id="@+id/switchReceiverOnOff"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/textFilterHeaderCountryCode"
-                android:textSize="18sp"
-                android:layout_weight="0.5"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/textFilterHeaderConvertTo"
-                android:textSize="18sp"
-                android:layout_weight="0.5"/>
-            <ImageButton android:id="@+id/buttonAddFilterRow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/button_desc_add_row"
-                android:background="@android:drawable/ic_input_add"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/field_parent_filters"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/instruction_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:text="@string/config_page_message" />
-
         <LinearLayout android:id="@+id/fieldHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:weightSum="1"
             android:layout_marginTop="30dp"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="6"
-                android:textSize="18sp"
+                android:layout_weight="1"
+                android:textSize="20sp"
                 android:text="@string/textFieldHeaderNumber"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:textSize="18sp"
-                android:text="@string/textFieldHeaderDelay"/>
             <ImageButton android:id="@+id/buttonAddRow"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -75,6 +34,33 @@
 
         <LinearLayout
             android:id="@+id/field_parent"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/textFilterHeaderCountryCode"
+                android:textSize="20sp"
+                android:layout_weight="1"/>
+
+            <ImageButton
+                android:id="@+id/buttonAddFilterRow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@android:drawable/ic_input_add"
+                android:contentDescription="@string/button_desc_add_row" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/field_parent_filters"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
