App intro/guide added

--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -7,4 +7,8 @@
         android:title="@string/menu_reset"
         android:orderInCategory="200" >
     </item>
+    <item android:id="@+id/menu_guide"
+        android:title="@string/menu_guide"
+        android:orderInCategory="200" >
+    </item>
 </menu>
